2021-01-18  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (exec_with_timeout): Execute timeout in the background so that it can handle signals
	* check_ssl_cert (check_crl): Checks revokation via CRL

2021-01-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_ocsp): OCSP check on all the chain elements

2021-01-14  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): retries when SSL Labs is running at full capacity

2020-12-23  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): - instead of _ to separate words in the command line options

2020-12-22  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): added the --no-proxy option

2020-12-21  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): added a sanity check for the -f option
	* check_ssl_cert (main): better handling of certificates without CN

2020-12-16  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (main): fixed the regex for the proxy cleanup for s_client

2020-12-15  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (require_s_client_option): Checks if s_client supports the -no_ssl[23] options
	* check_ssl_cert (main): Better filtering of the nmap output

2020-12-11  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Corrected the handling of the issuer URI

2020-12-01  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Correct handling of -proxy by s_client and --proxy by cURL

2020-11-30  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (create_temporary_file): bug fix: temp directory not used
	* check_ssl_cert: patch for the --element option
	* check_ssl_cert: bug fix: force -4 or -6 with cURL when specified

2020-08-07  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert: Fixed a bug with the output of --version

2020-07-24  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (check_attr): Fixed a bug in the output with --not-issued-by

2020-07-02  Matteo Corti  <matteo@corti.li>

	* check_ssl_cert (fetch_certificate): MySQL support
